<resources>
    <string name="app_name">MIX</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="contacts">Contacts</string>
    <string name="Browser">browser</string>
    <string name="setHome">Set HOME</string>
    <string name="home">HOME</string>
    <string name="action_sort">Sort</string>
    <string name="nameText">Please enter a new name:</string>
    <string name="phoneText">Please enter a new phone:</string>
    <string name="hintName">Name: %1$s</string>
    <string name="hintPhone">Phone: %1$s</string>
    <string name="action_edit">Edit</string>


    <string name="ok">OK</string>
    <string name="file">File Exp</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="insert">Insert</string>
    <string name="add_contact">Add contact</string>
</resources>
