<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff26b4e9"
    android:gravity="center">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:id="@+id/imageView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="25sp"
            android:text="@string/hintName"
            android:id="@+id/hintName"
            android:layout_margin="10dp"
            android:textColor="#FFFFFF"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hintPhone"
            android:id="@+id/hintPhone"
            android:textSize="25sp"
            android:layout_margin="10dp"
            />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"

            android:id="@+id/btn_dismiss" />
    </LinearLayout>

</LinearLayout>